Actualización en el syllabus sobre la bibliografía (editado en VSC)

--- a/Presentacion/Syllabus Semestre 2019_1.tex
+++ b/Presentacion/Syllabus Semestre 2019_1.tex
@@ -117,7 +117,7 @@ De acuerdo al Reglamento General de Exámenes de la UNAM, se considera una calif
 \end{itemize}
 \newpage
 \section{Bibliografía.}
-Se recomienda la consulta de los siguientes textos, en cada uno de los temas se propocionará bibliografía adicional para una mejor comprensión del tema.
+Se recomienda la consulta de los siguientes textos que están disponibles en la biblioteca de la Facultad, en cada uno de los temas se propocionará bibliografía adicional para una mejor comprensión del tema.
 \nocite{*}
 \bibliographystyle{apalike-es}
 \bibliography{LibrosFisica2019}
