Actualización 6 de agosto
Se hacen cambios en el esquema de evaluación, se retiran los ensayos y se incrementa el porcentaje para las tareas.

--- a/Presentacion/Lista Inicial.tex
+++ b/Presentacion/Lista Inicial.tex
@@ -9,7 +9,7 @@
 \renewcommand{\arraystretch}{1.75}
 \usepackage{color}
 \marginsize{1cm}{2cm}{-1cm}{2cm}  
-\title{Registro de alumnos \\ \begin{large}Curso de Física Computacional \\ Semestre 2018-2   \\ Grupo 8212 \end{large}}
+\title{Registro de alumnos - Curso de Física \\ Semestre 2019-1   \\ Grupo 5378}
 %\subtitle{\begin{large}  \end{large}}
 \date{ }
 \begin{document}
