--- a/Presentacion/Syllabus Semestre 2019_1.tex
+++ b/Presentacion/Syllabus Semestre 2019_1.tex
@@ -45,7 +45,7 @@ M. en C. Abraham Lima Buendía. \texttt{abraham3081@ciencias.unam.mx}}
 \renewcommand\labelenumii{\theenumi.{\arabic{enumii}}}
 \maketitle
 \fontsize{12}{12}\selectfont
-\textbf{Lugar: }Laboratorio . Departamento de Física.
+\textbf{Lugar: }Laboratorio de Física General 1. Departamento de Física.
 
 \textbf{Horario: } Martes y Viernes de 11 a 14 horas.
 
@@ -65,18 +65,17 @@ El curso requiere que le dediquen al menos el mismo número de horas de trabajo 
 \section{Evaluación.}
 Los elementos y la proporción de la calificación del curso que se promediarán al final, se distribuyen de la siguiente manera:
 \begin{itemize}
-\item \textbf{Tareas semanales $\mathbf{30\%}$} : Con la finalidad de que el alumno desarrolle la capacidad de solución de problemas, se les proporcionará cada semana, un conjunto de ejercicios que deberá de entregar, la fecha de entrega quedará definida con anticipación, y se avisa que no se recibirán tareas extemporáneas. Las tareas son individuales y se entregarán a mano, es decir, no se recibirán por correo electrónico o memoria usb. Para que una tarea cuente, deberán de entregar al menos el $50\%$ de los ejercicios resueltos. 
-\item \textbf{Exámenes parciales $\mathbf{40\%}$} : Habrá cuatro exámenes parciales en clase, que cubrirán los temas revisados.
+\item \textbf{Tareas semanales $\mathbf{50\%}$} : Con la finalidad de que el alumno desarrolle la capacidad de solución de problemas, se les proporcionará cada semana, un conjunto de ejercicios que deberá de entregar, la fecha de entrega quedará definida con anticipación, y se avisa que no se recibirán tareas extemporáneas. Las tareas son individuales y se entregarán a mano, es decir, no se recibirán por correo electrónico o memoria usb. Para que una tarea cuente, deberán de entregar al menos el $50\%$ de los ejercicios resueltos. 
+\item \textbf{Exámenes parciales $\mathbf{30\%}$} : Habrá cuatro exámenes parciales en clase, que cubrirán los temas revisados.
 \begin{enumerate}
 \item Primer examen parcial: Tema 1. Conceptos básicos.
 \item Segundo examen parcial: Tema 2. Electricidad y magnetismo.
 \item Tercer examen parcial: Tema 3. Óptica.
 \item Cuarto examen parcial: Tema 4. Estructura de la materia. 
 \end{enumerate}
-\item \textbf{Ensayos $\mathbf{10\%}$} : El alumno elaborará un ensayo sobre un tema específico del contenido del curso, en donde extenderá los conceptos, ideas, etc. Se avisará oportunamente la fecha de entrega y las características del ensayo.
-\item \textbf{Prácticas $mathbf{20\%}$} : Por cada práctica que se realice, se entregará un reporte por mesa de trabajo, en donde se discutirán los resultados obtenidos, se proporcionará una guía para implementar cada práctica y una guía general para elaborar el reporte.
+\item \textbf{Prácticas $\mathbf{20\%}$} : Por cada práctica que se realice, se entregará un reporte por mesa de trabajo, en donde se discutirán los resultados obtenidos, se proporcionará una guía para implementar cada práctica y una guía general para elaborar el reporte.
 \end{itemize}
-La calificación final se obtendrá de los porcentajes indicados para las tareas semanales, exámenes parciales y ensayos. En el caso de obtener un promedio final mayor o igual a $6$, será la calificación que se asentará en el acta, siendo la calificación definitiva que obtendría el alumno.
+La calificación final se obtendrá de los porcentajes indicados para las tareas semanales, exámenes parciales y prácticas. En el caso de obtener un promedio final mayor o igual a $6$, será la calificación que se asentará en el acta, siendo la calificación definitiva que obtendría el alumno.
 \section{Un examen de reposición.}
 Considerando que sólo habrá cuatro exámenes durante el semestre, se considera la posibilidad de que el alumno presente una única reposición si y sólo si se cumplen cada uno de los siguientes puntos:
 \begin{itemize}
@@ -84,7 +83,6 @@ Considerando que sólo habrá cuatro exámenes durante el semestre, se considera
 \item Sólo un examen parcial (de los cuatro) tenga una calificación no aprobatoria, es decir, que la calificación del examen parcial sea menor a $6$ (seis)
 \item El alumno debió de haber realizado todas las prácticas y haber entregado los respectivos reportes.
 \item El alumno debió de haber entregado todas las tareas semanales.
-\item El alumno debió de haber entregado todos los ensayos.
 \end{itemize}
 En caso de contar con un promedio final aprobatorio del curso (los cuatro exámenes parciales aprobados), no se aplicará una reposición de algún examen para subir el promedio final del curso.
 \section{Examen final.}
@@ -93,12 +91,11 @@ El examen final del curso se presentará si y sólo si:
 \item El alumno presentó y entregó los cuatro exámenes parciales.
 \item El alumno entregó todas las tareas del curso.
 \item El alumno realizó todas las prácticas y entregó todos los reportes.
-\item El alumno entregó todos los ensayos.
 \item La calificación de dos exámenes parciales del alumno (o más exámenes parciales) tienen una calificación menor a seis.
 \end{itemize}
-En caso de presentar el examen final, la calificación obtenida, es la que se asentará en el acta de calificaciones del curso de Física. \textbf{Ya no se promediará con las tareas semanales ni con las prácticas, ni con los ensayos}.
+En caso de presentar el examen final, la calificación obtenida, es la que se asentará en el acta de calificaciones del curso de Física. \textbf{Ya no se promediará con las tareas semanales ni con las prácticas}.
 \par
-\emph{En caso de haber presentado al menos un examen parcial y/o haber entregado al menos una tarea} se promediarán respectivamente las tareas, exámenes, prácticas y ensayos.
+\emph{En caso de haber presentado al menos un examen parcial y/o haber entregado al menos una tarea} se promediarán respectivamente las tareas, exámenes y prácticas.
 
 
 Sólo se asentará en el acta de calificaciones \textcolor{blue}{NP} si el(la) alumn{@} no entrega tarea alguna y no presenta algún examen. (¿?)
