Actualización 7 de agosto de 2018

--- a/Presentacion/ExamenDiagnostico.tex
+++ b/Presentacion/ExamenDiagnostico.tex
@@ -26,7 +26,7 @@
 \renewcommand\labelenumii{\theenumi.{\arabic{enumii}}}
 \maketitle
 \fontsize{14}{14}\selectfont
-Con la finalidad de explorar tu formación en matemáticas y física que desarrollaste durante el bachillerato, el siguiente examen contiene preguntas sobre temas generales que habrás visto, te pedimos que respondas de la manera más clara.
+Con la finalidad de explorar tu formación en matemáticas y física que has desarrollado, te pedimos gentilmente  que respondas el siguiente examen que contiene preguntas sobre temas generales que habrás visto.
 
 Esta examen no forma parte de los elementos para la calificación del curso, pero si es necesario que lo respondas. En caso de que no comprendas la pregunta o no conozcas la manera de resolver algún problema, déjalo indicado en tu hoja de respuestas.
 
@@ -36,13 +36,13 @@ Para las siguientes preguntas no te apoyes consultando en internet ya sea con el
 \item En la vida diaria y en la escala del ser humano, las leyes de Newton están presentes a diario. Explica brevemente en qué consisten estas leyes y menciona un ejemplo para cada una de ellas.
 \item También a diario escuchamos, leemos o encontramos información sobre cantidades, unas son de tipo escalar y otras de tipo vectorial. ¿En qué consiste cada una? Menciona tres ejemplos de cada tipo de esas cantidades.
 \item Considera como referencia una casa en donde se tienen los equipos electrodomésticos más comunes: refrigerador, lavadora, televisión, ventiladores, sistema de iluminación, etc. Habrás escuchado mencionar algunas características de cada uno de esos equipos: voltaje, corriente y potencia. Explica estos tres conceptos.
-\item Cuando vemos un arcoiris, además de presenciar un fenómeno natural tan atractivo, también estamos ante un fenómeno de la óptica que permite la presencia del arcoiris, ¿cuál es ese fenómeno óptico y en qué consiste?
-\item Sabemos que el átomo más sencillo, es el átomo de hidrógeno que contiene un protón y un electrón, además es el elemento más abundante en el universo. Una manera que permite clasificar a los elementos químicos por ciertas propiedades, es la tabla periódica, explica cómo es posible que haya otros elementos químicos aparte del hidrógeno y que nos son tan comunes como el aluminio, el oro, la plata, el mercurio, etc.
+%\item Cuando vemos un arcoiris, además de presenciar un fenómeno natural tan atractivo, también estamos ante un fenómeno de la óptica que permite la presencia del arcoiris, ¿cuál es ese fenómeno óptico y en qué consiste?
+%\item Sabemos que el átomo más sencillo, es el átomo de hidrógeno que contiene un protón y un electrón, además es el elemento más abundante en el universo. Una manera que permite clasificar a los elementos químicos por ciertas propiedades, es la tabla periódica, explica cómo es posible que haya otros elementos químicos aparte del hidrógeno y que nos son tan comunes como el aluminio, el oro, la plata, el mercurio, etc.
 \end{enumerate}
 \section{Matemáticas.}
 Te pedimos gentilmente que no ocupes calculadora, tableta o el celular para apoyarte en la solución de las siguientes preguntas.
 \begin{enumerate}
-\item ¿Qué entiendes por una función matemática?
+%\item ¿Qué entiendes por una función matemática?
 \item A menudo encontraremos cantidades expresadas en ciertas unidades, pero para un mejor manejo, nos conviene expresarlas en unidades más generales. A continuación te pedimos que conviertas las cantidades que se indican:
 \begin{enumerate}
     \item Velocidad: $30 \dfrac{m}{s} \rightarrow \dfrac{km}{h}$
@@ -55,23 +55,23 @@ Te pedimos gentilmente que no ocupes calculadora, tableta o el celular para apoy
 2 \: x + 8 \: y &= 14
 \end{align*}
 \item En la hacienda \enquote{Los Naranjos}, se tienen 300 plantas de higo, el finquero indicó que por cada dos plantas sanas hay una planta infectada con el gusano barrenador. Determina el total de plantas infectadas y el de plantas sanas en la hacienda.
-\item En el estudio de la mecánica clásica encontraremos expresiones que rigen el movimiento de un cuerpo uniformemente acelerado, como las dos siguientes:
-\begin{align}
-x &= x_{0} + v_{0} \: t + \dfrac{a}{2} \: t^{2} \label{eq:ecuacion_01} \\
-v &= v_{0} + a \: t \label{eq:ecuacion_02}
-\end{align}
-Para demostrar la siguiente expresión
-\begin{align*}
-2 \: a ( x - x_{0}) = v^{2} - v_{0}^{2} 
-\end{align*}
-tendrás que eliminar el parámetro $t$ de las expresiones anteriores (\ref{eq:ecuacion_01}) y (\ref{eq:ecuacion_02}).
-\item Grafica la siguiente función en el intervalo $[-5, 5]$
-\begin{align*}
-f(x) = x^{2} - 7 \: x + 10
-\end{align*}
-\begin{enumerate}
-\item Encuentra los puntos en donde la función se anula, es decir, donde $f(x)=0$, a estos puntos se les conoce como \emph{raíces de la función}.
-\item ¿Hay un valor mínimo para la función en el intervalo? ¿Cuál es?
-\end{enumerate}
+%\item En el estudio de la mecánica clásica encontraremos expresiones que rigen el movimiento de un cuerpo uniformemente acelerado, como las dos siguientes:
+%\begin{align}
+%x &= x_{0} + v_{0} \: t + \dfrac{a}{2} \: t^{2} %\label{eq:ecuacion_01} \\
+%v &= v_{0} + a \: t \label{eq:ecuacion_02}
+%\end{align}
+%Para demostrar la siguiente expresión
+%\begin{align*}
+%\: a ( x - x_{0}) = v^{2} - v_{0}^{2} 
+%\end{align*}
+%tendrás que eliminar el parámetro $t$ de las expresiones anteriores (\ref{eq:ecuacion_01}) y (\ref{eq:ecuacion_02}).
+%\item Grafica la siguiente función en el intervalo $[-5, 5]$
+%\begin{align*}
+%f(x) = x^{2} - 7 \: x + 10
+%\end{align*}
+%\begin{enumerate}
+%\item Encuentra los puntos en donde la función se anula, es decir, donde $f(x)=0$, a estos puntos se les conoce como \emph{raíces de la función}.
+%\item ¿Hay un valor mínimo para la función en el intervalo? ¿Cuál es?
+%\end{enumerate}
 \end{enumerate} 
 \end{document}
