--- a/Preambulos/pre_beamer.tex
+++ b/Preambulos/pre_beamer.tex
@@ -15,6 +15,7 @@
 }
 \usepackage{amsmath}
 \usepackage{amsthm}
+\usepackage{amsfonts}
 \usepackage{multicol}
 \usepackage{graphicx}
 \usepackage{tabulary}
@@ -109,4 +110,5 @@
 
 \makeatother
 
+\sisetup{separate-uncertainty}%
 
