--- a/Tema 1 - Conceptos basicos/Tema1_01.tex
+++ b/Tema 1 - Conceptos basicos/Tema1_01.tex
@@ -19,11 +19,6 @@
 \section{¿Qué estudia la física?}
 \frame{\tableofcontents[currentsection, hideothersubsections]}
 \subsection{Introducción}
-\begin{frame}[plain]
-\begin{figure}
-\includestandalone[scale=0.55]{Figuras/mapamental2}
-\end{figure}
-\end{frame}
 \begin{frame}   
 \frametitle{¿Qué estudia la física?}
 La física estudia lo grande y lo pequeño, lo viejo y lo nuevo. 
@@ -65,6 +60,11 @@ Como resultado de la interpretación de la química y la biología, así como de
 \vfill
 K. Bogdánov. El Físico visita al biólogo. Editorial Mir (1986)
 \end{frame}
+\begin{frame}[plain]
+    \begin{figure}
+    \includestandalone[scale=0.55]{Figuras/mapamental2}
+    \end{figure}
+\end{frame}
 \begin{frame}
 \frametitle{La física en el estudio}
 El estudio de la física es también una aventura:
@@ -86,17 +86,201 @@ A través de la observación de fenómenos naturales, se busca determinar un mod
 \begin{frame}   
 \frametitle{Modelos en física}
 Esos modelos se conocen como teorías físicas, si están muy bien establecidos y se usan ampliamente, se le llaman leyes.
+\end{frame}
+\begin{frame}
+\frametitle{Pasos a seguir}
+El desarrollo de la ciencias exige creatividad.
 \\
 \bigskip
+\pause
+El científico debe aprender a hacer las preguntas adecuadas, a diseñar experimentos para tratar de resolverlas y a deducir conclusiones apropiadas de los resultados.
+\end{frame}
+\begin{frame}
+\frametitle{Usando modelos en física}
+En física como en otras ciencias, una primera aproximación de un sistema o fenómeno natural es a través de un modelo.
+\\
+\bigskip
+\pause
+Que es una versión simplificada de ese sistema físico, normalmente demasiado complejo como para analizarse con todos sus pormenores.
+\end{frame}
+\begin{frame}
+\frametitle{Consideraciones en los modelos}
+Además se establecen una serie de suposiciones tanto matemáticas como físicas, que permiten el estudio del fenómeno.
+\\
+\bigskip
+\pause
+No quiere decir que se eviten o se cancelen, \emph{recordemos que será una primera aproximación al estudio del fenómeno}.
+\end{frame}
+\begin{frame}
+\frametitle{Ejemplo de modelo}
+\begin{figure}
+    \centering
+    \includegraphics[scale=0.75]{./Imagenes/Modelo_Bola_01.png}
+\end{figure}
+\end{frame}
+\begin{frame}
+\frametitle{Ejemplo de modelo}
+\begin{figure}
+    \centering
+    \includegraphics[scale=0.75]{./Imagenes/Modelo_Bola_02.png}
+\end{figure}
 \end{frame}
 \section{Medición e incertidumbre}
+\frame{\tableofcontents[currentsection, hideothersubsections]}
+\subsection{La medición en Física}
 \begin{frame}
-
+\frametitle{Medir en física}
+Una de las primeras tareas que debemos de realizar para proponer un modelo a un sistema o fenómeno, es la tarea de medir.
 \end{frame}
-\section{Cinemática}
 \begin{frame}
-
+\frametitle{¿Qué es medir?}
+De acuerdo a la Real Academia de la Lengua:
+\\
+\bigskip
+\pause
+medir:
+(\textit{Del lat. metiri.})
+\\
+\bigskip
+1. tr. Comparar una cantidad con su respectiva unidad, con el fin de averiguar cuántas veces la segunda está contenida en la primera.
 \end{frame}
+\begin{frame}
+\frametitle{Cantidades físicas}
+Un número empleado para describir cuantitativamente un fenómeno físico se le llama \textcolor{blue}{una cantidad física}.
+\\
+\bigskip
+\pause
+Algunas cantidades físicas son tan básicas que sólo podemos definirlas describiendo la forma de medirlas, es decir, con una definición operativa.
+\end{frame}
+\begin{frame}
+\frametitle{Sistema de Medidas}
+Al medir una cantidad, \emph{siempre la comparamos con un estándar de referencia}.
+\\
+\bigskip
+\pause
+El sistema de unidades empleado por los científicos en todo el mundo se denomina comúnmente \enquote{sistema métrico} aunque, desde 1960, su nombre oficial es \textbf{Sistema Internacional}, o \textbf{SI}.
+\end{frame}
+\begin{frame}
+\frametitle{Unidades base}
+Son 7 unidades sobre las que se fundamenta el sistema y de cuya combinación se obtienen todas las unidades derivadas.
+\end{frame}
+\begin{frame}[plain]
+\frametitle{Unidades base}
+\begin{tabular}{ | c | c | c |}
+\hline
+Magnitud & Unidad & Símbolo \\ \hline
+\textbf{longitud} & metro & m \\ \hline
+\textbf{masa} & kilogramo & kg \\ \hline
+\textbf{tiempo} & segundo & s \\ \hline
+\textbf{corriente eléctrica} & ampere & A \\ \hline
+\textbf{temperatura termodinámica} & kelvin & K \\ \hline
+\textbf{intensidad luminosa} & candela & cd \\ \hline
+\textbf{cantidad de sustancia} & mol & mol \\ \hline
+\end{tabular}
+\end{frame}
+\begin{frame}[plain]
+\frametitle{Metro}
+Es la longitud de la trayectoria recorrida por la luz en el vacío en un lapso de 1/299 792 458 de segundo.
+\begin{figure}
+    \centering
+    \includegraphics[scale=0.35]{./Imagenes/Lab1Laser.jpg}
+\end{figure}
+\end{frame}
+\begin{frame}[plain]
+\frametitle{Masa}
+\hspace{-1cm}
+\begin{minipage}{5.5cm}
+Es la masa igual a la del prototipo internacional del kilogramo: un cilindro de platino iridio de diámetro y altura iguales (39 mm)
+\end{minipage}
+\hspace{0.75cm}
+\begin{minipage}{5cm}
+\begin{figure}
+    \centering
+    \includegraphics[scale=0.25]{./Imagenes/Masa_Prototipo.png}
+\end{figure}
+\end{minipage}
+\end{frame}
+\begin{frame}
+\frametitle{Curiosidades sobre el cilindro}
+\setbeamercolor{item projected}{bg=blue!70!black,fg=yellow}
+\setbeamertemplate{enumerate items}[circle]
+\begin{enumerate}[<+->]
+\item Se fabricó en 1889.
+\item La proporción de platino es del $90\%$ y $10\%$ de iridio.
+\item Está resguardado en la Oficina del Buró Internacional de Pesos y Medidas (BIPM)
+\item Existen sólo 6 copias oficiales.
+\item Se han distribuido $80$ copias en el mundo para adaptarlas como prototipos.
+\item El manejo de la campana es extremadamente cuidadoso, ya que evita el contacto con polvo, humedad, etc.
+\end{enumerate}
+\end{frame}
+\begin{frame}[plain]
+\frametitle{Segundo}
+Es la duración de 9 192 631 770 períodos de la radiación correspondiente a la transición entre los dos niveles hiperfinos del estado fundamental del átomo de cesio 133.
+\begin{figure}
+    \centering
+    \includegraphics[scale=0.2]{./Imagenes/Reloj_Atomico.jpg}
+\end{figure}
+\end{frame}
+\begin{frame}[plain]
+\frametitle{Reloj atómico de cesio}
+\begin{figure}
+    \hspace*{-1cm}
+    \centering
+    \includegraphics[scale=0.6]{./Imagenes/Csclock.png}
+\end{figure}
+\end{frame}
+\begin{frame}
+\frametitle{Ampere}
+Es la intensidad de una corriente constante que mantenida en dos conductores paralelos, rectilíneos de longitud infinita, de sección circular despreciable, colocados a un metro de distancia entre sí, en el vacío, producirá entre ellos una fuerza igual a $\SI{2e-7}{\newton\per\metre}$
+\end{frame}
+\begin{frame}
+\frametitle{Kelvin}
+Es la fracción de $1/273.16$ de la temperatura termodinámica del punto triple del agua.
+\end{frame}
+\begin{frame}
+\frametitle{Kelvin}
+Es de uso común expresar una temperatura termodinámica (\textbf{T}) en función de su diferencia por relación a la temperatura de referencia $T_{0} = \SI{273.15}{\kelvin}$, punto de congelación del agua.
+\end{frame}
+\begin{frame}
+\frametitle{Kelvin}
+Esta diferencia de temperatura es llamada temperatura Celsius (\textbf{t}) y se define como
+\[ t - T - T_{0} \]
+La unidad de temperatura Celsius es el grado Celsius ($\SI{}{\celsius}$) igual a la unidad kelvin por definición.
+\end{frame}
+\begin{frame}
+\frametitle{Candela}
+Es la intensidad luminosa en una dirección dada de una fuente que emite una radiación monocromática de frecuencia $\SI{540e12}{\hertz}$ y cuya intensidad energética en esa dirección es $\SI{1/683}{\watt\per\steradian}$.
+\end{frame}
+\begin{frame}
+\frametitle{Esterorradián}
+Se define como un ángulo sólido que, teniendo su centro en el de una esfera, tiene una superficie (sobre la esfera) igual al cuadrado del radio. El ángulo sólido de una esfera completa es $4 \: \pi$ estereorradianes.
+\begin{figure}
+    \centering
+    \includegraphics[scale=0.7]{./Imagenes/estereorradian.jpg}
+\end{figure}
+\end{frame}
+\begin{frame}
+\frametitle{mol}
+Es la cantidad de sustancia que contiene tantas entidades elementales como existen átomos en $\SI{0.012}{\kilogram}$ de carbono 12.
+\end{frame}
+\begin{frame}
+\frametitle{mol}
+En general, un mol de cualquier sustancia contiene $\si{6.022e23}$ moléculas o átomos de dicha sustancia.
+\\
+\bigskip
+Así pues, en un mol de agua ($H_{2}O$) hay $\si{6.022e23}$ moléculas de $H_{2}O$.
+\end{frame}
+\begin{frame}
+\frametitle{mol}
+En Estados Unidos el \textcolor{blue}{día del mol} se celebra cada 23 de octubre, entre las 6:02 de la mañana y las 6:02 de la tarde aprovechando los dígitos del número de Avogadro.
+\end{frame}
+% \section{Cinématica}
+% \frame{\tableofcontents[currentsection, hideothersubsections]}
+% \subsection{Nombre Subseccion}
+
+% \begin{frame}
+
+% \end{frame}
 
 
 \end{document}
