--- a/Preambulos/pre_beamer.tex
+++ b/Preambulos/pre_beamer.tex
@@ -22,6 +22,7 @@
 \usepackage{booktabs}
 \usepackage{epstopdf}
 \usepackage{media9}
+\usepackage{cancel}
 \usepackage[binary-units=true]{siunitx}
 \usepackage{standalone}
 \usepackage{longtable}
